# Diabetic-Foot-Ulcer-Prediction-Survival-Analysis

./: README.md  app.py  db.py  hybrid_synthetic2_data.csv  hybrid_synthetic_data.csv  model.py  pyproject.toml  utils.py
